added for deploy

--- a/day2/index.html
+++ b/day2/index.html
@@ -12,6 +12,28 @@
     <h1>THIS IS MY HEADING</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe odio inventore suscipit minima, quis possimus fuga tenetur numquam harum totam dicta. Distinctio cumque quidem, quod vel veniam praesentium voluptatum, expedita consectetur provident quo, enim illo asperiores! Quam tenetur suscipit pariatur officia veniam modi consectetur molestiae, culpa fugiat minus. Rem culpa eius natus unde animi officiis sequi illum repellat. Maxime iste aut debitis numquam modi, iusto cumque placeat soluta sequi quasi, quia maiores similique. Repudiandae laborum optio omnis aspernatur delectus sed excepturi inventore, nemo necessitatibus corrupti? Laboriosam a ut, quaerat, molestiae corporis nostrum, placeat velit odio qui iste unde culpa perspiciatis.</p>
 
+
+
+        <br>
+
+        <a href="https://google.com">GO to Google</a>
+        <br>
+        <br>
+
+
+        <div class="btn btn-red">
+            Red Button
+        </div>
+        <div class="btn btn-green">
+            Green Button
+        </div>
+        <div class="btn btn-pink">
+            Pink Button
+        </div>
+
+
+
+
     <div class="card">
         This is a card
     </div>
